# cmake_min_test1

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  version.h.in
